; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/grep/extr_dfa.c_dfasyntax.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/grep/extr_dfa.c_dfasyntax.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@syntax_bits_set = common dso_local global i32 0, align 4
@syntax_bits = common dso_local global i32 0, align 4
@case_fold = common dso_local global i32 0, align 4
@eolbyte = common dso_local global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dfasyntax(i32 %0, i32 %1, i8 zeroext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8 %2, i8* %6, align 1
  store i32 1, i32* @syntax_bits_set, align 4
  %7 = load i32, i32* %4, align 4
  store i32 %7, i32* @syntax_bits, align 4
  %8 = load i32, i32* %5, align 4
  store i32 %8, i32* @case_fold, align 4
  %9 = load i8, i8* %6, align 1
  store i8 %9, i8* @eolbyte, align 1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
